--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Joanna Gyory</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -15,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Joanna Gyory, Data Scientist</h1>
-				<p>I'm a lecturer at the <em>University of New Hampshire</em> This is my portfolio page. <a href="/about">Find out more about me here.</a></p>
+				<p>I'm a lecturer at the <em>University of New Hampshire.</em> This is my portfolio page. <a href="/about">Find out more about me here.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
