--- a/index.html
+++ b/index.html
@@ -6,3 +6,17 @@ title: Joanna Gyory
         <h1>Joanna Gyory, Data Scientist</h1>
 	<p>I'm a lecturer at the <em>University of New Hampshire.</em> This is my portfolio page. <a href="/about">Find out more about me here.</a></p>
 </div><!-- /.blurb -->
+
+*italics*
+
+**bold**
+
+~~strikethrough~~
+
+# Header 1
+
+## Header 2
+
+### Header 3
+
+#### Header 4
