--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
----
-layout: default
-title: Joanna Gyory
----
-<div class="blurb">
-        <h1>Joanna Gyory, Data Scientist</h1>
-	<p>I'm a lecturer at the <em>University of New Hampshire.</em> This is my portfolio page. <a href="/about">Find out more about me here.</a></p>
-</div><!-- /.blurb -->
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Joanna Gyory</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Joanna Gyory, Data Scientist</h1>
+				<p>I'm a lecturer at the <em>University of New Hampshire.</em> This is my portfolio page. <a href="/about">Find out more about me here.</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:blahblah@unh.edu">email</a></li>
+        		<li><a href="https://github.com/joannagyory">github.com/joannagyory</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
